# nzthermo

./: .clang-format  .coverage  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  c.ipynb  ecape_parcel.py  nb.ipynb  notebook.ipynb  pyproject.toml  requirements.dev.txt  scratchpad.ipynb  setup.py  t.py  t2.py
.github/workflows/: python-app.yml
assets/: development.md
nzthermo/: __init__.py  _c.pxd  _c.pyi  _c.pyx  _datetime.pyx  _experimental.py  _typing.py  const.py  core.py  functional.py
nzthermo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nzthermo/_experimental/: _datetime.pyx  wbgt.h
src/include/: common.hpp  functional.hpp  libthermo.hpp  wind.hpp
src/lib/: _C.cpp  _C.hpp  common.hpp  functional.cpp  libthermo.cpp  wind.cpp
src/nzthermo/: _C.cpp  _C.pxd  __init__.py  _api.pxd  _c.pxd  _c.pyi  _c.pyx  _core.cpp  _core.pxd  _core.pyi  _core.pyx  _types.pyi  _typing.py  _typing.pyi  _ufunc.pyi  _ufunc.pyx  const.py  core.py  entrainment.py  functional.py  typing.py  utils.py
src/nzthermo/_experimental/: py_wbgt.pyx  wbgt.c
src/nzthermo/_experimental/ecape/: ECAPE_FUNCTIONS.py  GET_ECAPE.py
tests/: README.md  conftest.py  core_test.py  data.json  data.npz  dcape_test.py  entrainment_test.py  functional_test.py  libcore_test.py  moist_lapse_test.py  requirements.txt  ufunc_test.py  utils_test.py
tests/source/: ecape.py  test_ecape.py
