[build-system]
requires = [
    "wheel>=0.37.1",
    "setuptools>=64",
    "setuptools_scm>=8",
    "Cython>=0.29.23",
    "numpy>=1.23.4",
]
build-backend = "setuptools.build_meta"

[project]
name = "nzthermo"
dynamic = ["version"]
description = "(N, Z) Thermodynamics"
authors = [{ name = "Jason Leaver", email = "leaver2000@gmail.com" }]
dependencies = ['numpy']
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nzthermo"]

[tool.setuptools_scm]
write_to = "src/nzthermo/_version.py"

[tool.pytest]
testpaths = ["tests/"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
plugins = ["Cython.Coverage"]
source = ["nzthermo/"]

[tool.coverage.xml]
output = ".reports/coverage.xml"

[tool.coverage.report]
ignore_errors = false
show_missing = true
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:s
    # "def __repr__",
    # "if self.debug",
    # Don't complain if tests don't hit defensive assertion code:
    # "raise AssertionError",
    "raise NotImplementedError",
    "AbstractMethodError",
    # Don't complain if non-runnable code isn't run:
    # "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
target-version = ['py312']
line-length = 119
include = '(nzthermo|tests)\/.*(\.py|\.pyi)'
force-exclude = '(nzthermo|tests)\/.*(\.pyx)'

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true

[tool.isort]
profile = "black"
combine_as_imports = true

[tool.ruff]
target-version = "py312"
line-length = 119
fix = true

# [tool.ruff.lint]
# ignore = [
#     "E731", # do not assign a lambda expression, use a def
#     "E402", # module level import not at top of file
#     "E402", # module level import not at top of file
#     "E501", # line too long
#     "E741", # do not use variables named 'l', 'O', or 'I'
# ]
